--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 #titulo {
  font-family: sans-serif;
  color: #6A5ACD;
- margin-left: 6%;
+ margin-left: 10%;
  font-size: 40px;
  text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
@@ -15,7 +15,7 @@
 #subtitulo {
     font-family: sans-serif;
     color: #836FFF;
-    margin-left: 12%;
+    margin-left: 16%;
     font-size: 20px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
@@ -25,13 +25,14 @@ fieldset {
 }
 
 body {
-    background-color: #f0f8ff;
+    background: #4169e186;
     font-family:  sans-serif;
     font-size: 17px;
-    color: #59429d;
+    color: #00008B;
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
+    align-items: center;
 }
 
 input, select ,textarea, button{
@@ -44,7 +45,7 @@ input, select ,textarea, button{
 
 .campo label{
     margin-bottom: 0px;
-    color: #59429d;
+    color: #00008B;
     display: block;
 }
 
@@ -56,7 +57,7 @@ fieldset.grupo .campo{
 .campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea{
 
 padding: 4px;
-border: 1px solid #59429d;
+border: 1px solid #6A5ACD;
 box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 display: block;
 }
@@ -141,7 +142,7 @@ background: #E0E0F8;
 
 #Senioridade1{
     margin-top: -15px;
-    color: #59429d;
+    color: #00008B;
 }
 
 form {
